--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 <body>
     <main>
     <section id="container">
+       
         <article class="cartao">
             <div class="cartao__conteudo">
                 <h3>programação</h3>
+            <div class="cartao__conteudo__pergunta">
+                o que é CSS?
             </div>
+              <div class="cartao__conteudo__resposta">
+                o CSS é uma linguagem de estabilização
+              </div>
+          </div>
         </article>
     </section>
     </main>
