--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" 
+    content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>flashcard</title>
 </head>
 <body>
     <main>
     <section id="container">
-       
+        <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3>programação</h3>
+            <div class="cartao__conteudo__pergunta">
+                o que é JavaScript?
+            </div>
+              <div class="cartao__conteudo__resposta">
+                o JavaScript é uma linguagem de programação
+              </div>
+          </div>
+        </article>
         <article class="cartao">
             <div class="cartao__conteudo">
                 <h3>programação</h3>
