--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="cartao__conteudo">
                 <h3>programação</h3>
             <div class="cartao__conteudo__pergunta">
-                o que é JavaScript?
+                <p>o que é JavaScript?</p>
             </div>
               <div class="cartao__conteudo__resposta">
-                o JavaScript é uma linguagem de programação
+                <p>o JavaScript é uma linguagem de programação</p>
               </div>
           </div>
         </article>
@@ -26,10 +26,10 @@
             <div class="cartao__conteudo">
                 <h3>programação</h3>
             <div class="cartao__conteudo__pergunta">
-                o que é CSS?
+               <p>o que é CSS?</p>
             </div>
               <div class="cartao__conteudo__resposta">
-                o CSS é uma linguagem de estabilização
+               <p>o CSS é uma linguagem de estabilização</p>
               </div>
           </div>
         </article>
